[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
winit = "0.29.10"
raw-window-handle = "0.5.0"
ropey = { git = "https://github.com/cessen/ropey" }
synk_core = { path = "../core", package = "core" }
skia-safe = "0.71.0"
glutin = "0.31.3"
glutin-winit = "0.4.2"
