[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
skia = { package = "skia-safe", version = "0.71.0", features = [
    "gl",
    "wayland",
    "shaper",
    "textlayout",
    "svg",
] }
anyhow = "1.0.79"
winit = "0.29.10"
raw-window-handle = "0.5.0"
ropey = { git = "https://github.com/cessen/ropey" }
synk_core = { path = "../core", package = "core" }
glutin = "0.31.3"
glutin-winit = "0.4.2"
gl = "0.14.0"
